# plc_client_service_device

./: 2_configure.bat  2_configure.sh  3_build.bat  3_build.sh  CMakeLists.txt  README.md  build.py  vcpkg.json
call/: CMakeLists.txt  main.cpp
client/: CMakeLists.txt  main.cpp
plc/: CMakeLists.txt  main.cpp
protocol/: protocol.cpp  protocol.hpp
server/: CMakeLists.txt  main.cpp
test_modbus/: 1_configure.bat  1_configure.sh
test_modbus/client/: main.cpp
test_modbus/server/: main.cpp
